--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
 			<artifactId>spring-beans</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-		
+
 		<!-- Spring caching framework inside this -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -176,11 +176,14 @@
 			<version>${jstl.version}</version>
 			<type>jar</type>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>${servlet-api.version}</version>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.0.1</version>
 		</dependency>
+
 		<dependency>
 			<groupId>javax.servlet.jsp</groupId>
 			<artifactId>jsp-api</artifactId>
@@ -229,17 +232,23 @@
 			<artifactId>jackson-module-jaxb-annotations</artifactId>
 			<version>${jackson.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
 			<version>1.4</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
 			<version>1.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>${commons-fileupload.version}</version>
 		</dependency>
 
 		<dependency>
@@ -300,7 +309,6 @@
 		<activation.version>1.1.1</activation.version>
 		<standard.version>1.1.2</standard.version>
 		<jstl.version>1.2</jstl.version>
-		<servlet-api.version>2.5</servlet-api.version>
 		<jsp-api.version>2.2</jsp-api.version>
 		<ckfinder.version>2.3</ckfinder.version>
 		<thumbnailator.version>0.4.2</thumbnailator.version>
@@ -318,7 +326,6 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.7</java.version>
 		<downloadSources>true</downloadSources>
-		<webXmlPath>src/main/filters/dev/web.xml</webXmlPath>
 		<joda-time.version>2.1</joda-time.version>
 	</properties>
 </project>
